<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Through</string>
    <string name="menu_title_settings">Settings</string>
    <string name="feed_activity_label">Feed</string>
    <string name="menu_title_sign_up">Sign up</string>
    <string name="menu_title_create">Create</string>
    <string name="sign_up_activity_label">Sign up</string>
    <string name="connect_activity_label">Connect</string>
    <string name="twitter_oauth_activity_label">Twitter</string>
    <string name="menu_title_done">Done</string>
    <string name="media_activity_label">Through</string>
    <string name="menu_title_services">Services</string>
    <string name="menu_title_log_out">Log out</string>
    <string name="menu_title_about">About this app</string>
    <string name="menu_title_tos">Terms of service</string>
    <string name="menu_title_privacy">Privacy policy</string>
    <string name="licenses_activity_label">Licenses</string>
    <string name="menu_title_share">Share this app</string>
    <string name="facebook_app_id">481818645282078</string>
</resources>
