<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/menu_title_settings"
        android:icon="@drawable/ic_action_action_settings"
        android:showAsAction="always">
        <menu>
            <item android:id="@+id/action_services"
                android:title="@string/menu_title_services" />
            <item android:id="@+id/action_log_out"
                android:title="@string/menu_title_log_out" />
            <item android:id="@+id/action_about"
                android:title="@string/menu_title_about" />
            <item android:id="@+id/action_tos"
                android:title="@string/menu_title_tos" />
            <item android:id="@+id/action_privacy"
                android:title="@string/menu_title_privacy" />
        </menu>
    </item>
</menu>